tests/error/native_unsupported_array.vbc
int main() {
    int values[2] = {1, 2};
    return values[0];
}
